--- a/2025-01-05-react/02-components/src/components/pet-store/PetStore.css
+++ b/2025-01-05-react/02-components/src/components/pet-store/PetStore.css
@@ -1,3 +1,11 @@
 .PetStore p {
     color: green;
 }
+
+.PetStore {
+    display: flex;
+    flex-direction: column;
+    border: 2px solid lightgreen;
+    padding: 2px;
+    gap: 50px;
+}
