--- a/2025-01-12/social-network-client/src/components/posts/post/Post.css
+++ b/2025-01-12/social-network-client/src/components/posts/post/Post.css
@@ -1,13 +1,8 @@
 .Post {
     display: flex;
     flex-direction: column;
-    border: 1px dashed lightgreen;
     padding: 4px;
     margin: 8px;
     border-radius: 4px;
-    box-shadow: 10px 5px 5px black;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
-
-/* .Post:hover {
-    box-shadow: 0 3px 20px -2px rgba(20, 45, 100, 0.1);
-} */
