--- a/2025-01-12/social-network-client/src/components/posts/new/NewPost.css
+++ b/2025-01-12/social-network-client/src/components/posts/new/NewPost.css
@@ -4,8 +4,11 @@
     margin: 4px;
 }
 
-
 .NewPost > form {
     display: flex;
     flex-direction: column;
+}
+
+.NewPost .error {
+    color: red;
 }
