--- a/2025-01-19/social-network-client/src/components/common/loading-button/LoadingButton.css
+++ b/2025-01-19/social-network-client/src/components/common/loading-button/LoadingButton.css
@@ -1,8 +1,3 @@
-.LoadingButton i img {
+#imageLoading {
     width: 20px;
-}
-
-.LoadingButton > button {
-    display: flex;
-    flex-direction: column;
 }
