--- a/2025-03-04/01-file-uploads/frontend/src/components/posts/post/Post.css
+++ b/2025-03-04/01-file-uploads/frontend/src/components/posts/post/Post.css
@@ -17,6 +17,10 @@
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
+.Post img {
+    width: 300px;
+}
+
 .Post > div:nth-child(1) {
     font-size: large;
     font-weight: bold;
