--- a/2025-03-30-angular/02-social-network-client/src/app/components/posts/profile/profile.component.html
+++ b/2025-03-30-angular/02-social-network-client/src/app/components/posts/profile/profile.component.html
@@ -13,3 +13,11 @@
 {{username()}}
 <br>
 {{email()}}
+
+<hr>
+
+<!-- event binding -->
+<button (click)="sayHi()">Click me</button>
+
+<!-- property binding -->
+<button [disabled]="isButtonDisabled">Click me</button>
