--- a/2025-03-30-angular/02-social-network-client/src/app/components/layout/header/header.component.css
+++ b/2025-03-30-angular/02-social-network-client/src/app/components/layout/header/header.component.css
@@ -1,3 +1,20 @@
-p {
-    color:  red;
+#header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#header nav {
+    display: flex;
+    flex-direction: row;
+    gap: 6px;
+}
+
+#header .active {
+    color: green;
+}
+
+#header img {
+    width: 104px;
 }
