--- a/2025-03-30-angular/02-social-network-client/src/app/components/layout/header/header.component.html
+++ b/2025-03-30-angular/02-social-network-client/src/app/components/layout/header/header.component.html
@@ -1,1 +1,14 @@
-<p>header works!</p>
+<div id="header">
+    <div>
+        <h1><img src=""></h1>
+    </div>
+    <div>
+        <nav>
+            <a routerLink="/profile" routerLinkActive="active">Profile</a>
+            <a routerLink="/feed" routerLinkActive="active">Feed</a>
+        </nav>
+    </div>
+    <nav>
+        Hello Bob
+    </nav>
+</div>
