--- a/2025-03-30-angular/02-social-network-client/src/app/components/posts/profile/profile.component.html
+++ b/2025-03-30-angular/02-social-network-client/src/app/components/posts/profile/profile.component.html
@@ -1,23 +1,1 @@
-<!-- one way binding -->
-<p>{{name}}</p>
-<p>Current time: {{currentTime | date | allcaps}}</p>
-
-<!-- two way binding [()] = banana in a box-->
-<input [(ngModel)]="address" />
-{{address}}
-
-<hr>
-
-<input [(ngModel)]="username" />
-<br>
-{{username()}}
-<br>
-{{email()}}
-
-<hr>
-
-<!-- event binding -->
-<button (click)="sayHi()">Click me</button>
-
-<!-- property binding -->
-<button [disabled]="isButtonDisabled">Click me</button>
+<p>Profile works.....</p>
