--- a/2025-03-30-angular/02-social-network-client/src/app/components/posts/profile/profile.component.html
+++ b/2025-03-30-angular/02-social-network-client/src/app/components/posts/profile/profile.component.html
@@ -1,1 +1,6 @@
-<p>Profile works.....</p>
+@for (post of profile(); track post.id) {
+    <app-post></app-post>
+}
+@empty {
+    <p>Loading....</p>
+}
