--- a/2025-03-30-angular/02-social-network-client/src/app/components/layout/header/header.component.html
+++ b/2025-03-30-angular/02-social-network-client/src/app/components/layout/header/header.component.html
@@ -1,6 +1,6 @@
 <div id="header">
     <div>
-        <h1><img src=""></h1>
+        <img src="../../../../assets/images/logo.png">
     </div>
     <div>
         <nav>
