--- a/2025-03-30-angular/02-social-network-client/src/app/components/posts/profile/profile.component.html
+++ b/2025-03-30-angular/02-social-network-client/src/app/components/posts/profile/profile.component.html
@@ -1,5 +1,8 @@
 @for (post of profile(); track post.id) {
-    <app-post></app-post>
+    <app-post 
+        [post]="post"
+        (deletedPost)="removePost($event)"
+    ></app-post>
 }
 @empty {
     <p>Loading....</p>
